# submissions-infrastructure

./: .gitignore  .gitlint  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  clean-shell  plan.md  pyproject.toml  pytest.ini
docs/: README.md  bootstrap.md  deploy.md  promote_staging.md
resources/: condarc  condarc.m4  engine.yaml
resources/defs/linux/: linux.yaml
resources/defs/mac/: bioconda.yaml  mac.yaml
resources/defs/special/: engine.yaml  experimental.yaml
resources/defs/universal/: conda.yaml  python.yaml  (+2 more)
resources/etc/: condarc  gitconfig  profile.sh
scripts/: bootstrap  bootstrap-engine  bootstrap.sh  bootstrap_engine.py  bootstrap_lib.sh  deploy  deployto  fetch-micromamba  install-aws-tools-readme.md  install-aws-tools.sh  promote_staging  sanitize-command
scripts/engine/: __init__.py  __main__.py  command_runner.py  config.py  deploy.py  filesystem.py  logging.py  validators.py
scripts/install-aws-tools-resources/: aws-tools-activate-template.sh  install-aws-cli-mac.sh  install-aws-tools.condarc.yaml  install-aws-tools.env.yaml
tests/: __init__.py  bash_test_helpers.py  conftest.py  test_bash_test_system.py
tests/e2e/: __init__.py  test_real_deploy.py  test_real_workflow.py
tests/fixtures/: minimal_env.yaml
tests/integration/: __init__.py  test_bootstrap.py  test_deploy.py  test_promote.py
tests/resources/: lib.sh
tests/unit/: test_blue_green.py  test_bootstrap_args.py  test_deploy_args.py  test_deploy_tier.py  test_engine_cli.py  test_env_defs.py  test_error_handling.py  test_path_validation.py  test_promote_staging.py  test_symlink_validation.py  test_validators.py
(+8 files in other folders)
